updated doxygen docs

--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -163,7 +163,7 @@
       linkcolor=blue,%
       citecolor=blue,%
       unicode,%
-      pdftitle={Malakh},%
+      pdftitle={Malakh -\/ technická dokumentácia},%
       pdfsubject={Šachový engine na hru s neštandardnými šachovými pravidlami}%
     }
   % Custom commands used by the header
@@ -200,7 +200,7 @@
   \begin{titlepage}
   \vspace*{7cm}
   \begin{center}%
-  {\Large Malakh}\\
+  {\Large Malakh -\/ technická dokumentácia}\\
   \vspace*{1cm}
   {\large Generované programom Doxygen 1.10.0}\\
   \end{center}
